# OpenSearch

./: .history  CACHE_DEEP_DIVE.md  CACHE_EXPERIMENT_FINDINGS.md  CACHE_FINAL_RESULTS.md  CACHE_TESTING_GUIDE.md  cache_perf_e2e.py  cache_query_test.py  clickbench_ingest.py
gradle/: run.gradle
sandbox/libs/analytics-framework/src/main/java/org/opensearch/analytics/backend/: ExecutionContext.java
sandbox/libs/analytics-framework/src/main/java/org/opensearch/analytics/spi/: AnalyticsSearchBackendPlugin.java
sandbox/libs/dataformat-native/rust/: Cargo.toml
sandbox/plugins/analytics-backend-datafusion/: build.gradle
sandbox/plugins/analytics-backend-datafusion/rust/src/: api.rs  cache.rs  cross_rt_stream.rs  custom_cache_manager.rs  ffm.rs  indexed_executor.rs  query_executor.rs  search_stats.rs  session_context.rs  shard_table_provider.rs  statistics_cache.rs
sandbox/plugins/analytics-backend-datafusion/rust/src/indexed_table/: metrics.rs  parquet_bridge.rs  segment_info.rs  stream.rs  table_provider.rs
sandbox/plugins/analytics-backend-datafusion/src/main/java/org/opensearch/be/datafusion/: DataFusionPlugin.java  DataFusionService.java  DatafusionReaderManager.java  DatafusionResultStream.java  DatafusionSearchExecEngine.java  DatafusionSettings.java
sandbox/plugins/analytics-backend-datafusion/src/main/java/org/opensearch/be/datafusion/action/: DataFusionStatsAction.java
sandbox/plugins/analytics-backend-datafusion/src/main/java/org/opensearch/be/datafusion/cache/: CacheSettings.java  CacheUtils.java
sandbox/plugins/analytics-backend-datafusion/src/main/java/org/opensearch/be/datafusion/nativelib/: NativeBridge.java
sandbox/plugins/analytics-backend-datafusion/src/test/java/org/opensearch/be/datafusion/: DatafusionCachePerformanceTests.java
sandbox/plugins/analytics-backend-datafusion/src/test/java/org/opensearch/be/datafusion/action/: DataFusionStatsActionTests.java
sandbox/plugins/analytics-engine/: ANALYTICS_SEARCH_E2E.md  build.gradle
sandbox/plugins/analytics-engine/src/internalClusterTest/java/org/opensearch/analytics/action/: AnalyticsSearchActionIT.java
sandbox/plugins/analytics-engine/src/main/java/org/opensearch/analytics/: AnalyticsPlugin.java
sandbox/plugins/analytics-engine/src/main/java/org/opensearch/analytics/action/: AnalyticsBackends.java  AnalyticsSearchAction.java
sandbox/plugins/analytics-engine/src/main/java/org/opensearch/analytics/exec/: AnalyticsSearchService.java
sandbox/plugins/parquet-data-format/: build.gradle
server/src/main/java/org/opensearch/index/engine/: DataFormatAwareEngine.java
server/src/test/java/org/opensearch/cluster/: ClusterStateObserverTests.java
