[workspace]
resolver = "2"
members = [
    "common",
    "macros",
    "lib",
    "../../../plugins/analytics-backend-datafusion/rust",
    "../../../plugins/parquet-data-format/src/main/rust",
    "../../../plugins/native-repository-s3/src/main/rust",
    "../../../plugins/native-repository-gcs/src/main/rust",
    "../../../plugins/native-repository-azure/src/main/rust",
    "../../../plugins/native-repository-fs/src/main/rust",
    "../../../libs/tiered-storage/src/main/rust",
    "../../../plugins/block-cache-foyer/src/main/rust",
]

[workspace.dependencies]
# Arrow / Parquet
arrow = { version = "=58.3.0", features = ["ffi"] }
arrow-array = "=58.3.0"
arrow-ipc = "=58.3.0"
arrow-schema = "=58.3.0"
arrow-buffer = "=58.3.0"
parquet = "=58.3.0"

# DataFusion
datafusion = "=54.0.0"
datafusion-expr = "=54.0.0"
datafusion-datasource = "=54.0.0"
datafusion-common = "=54.0.0"
datafusion-execution = "=54.0.0"
datafusion-physical-expr = "=54.0.0"
datafusion-substrait = "=54.0.0"

# Async
tokio = { version = "=1.52.3", features = ["full"] }
tokio-util = "=0.7.18"
futures = "=0.3.32"
tokio-stream = "=0.1.18"

# Serialization
prost = "=0.14.3"
substrait = "=0.63.0"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

# Logging
log = "=0.4.29"

# Allocator
# disable_initial_exec_tls: Required because this library is loaded at runtime via dlopen/JVM FFM.
# Without it, jemalloc uses initial-exec TLS which fails on aarch64 Linux with:
#   "cannot allocate memory in static TLS block"
# The feature switches to global-dynamic TLS model, compatible with runtime loading.
tikv-jemallocator = { version = "=0.6.1", features = ["disable_initial_exec_tls", "profiling"] }
tikv-jemalloc-ctl = { version = "=0.6.1", features = ["stats"] }

# Misc
dashmap = { version = "=5.5.3", features = ["raw-api", "serde"] }
num_cpus = "=1.17.0"
object_store = "=0.13.2"
url = "=2.5.8"
tempfile = "=3.27.0"
chrono = "=0.4.44"
once_cell = "=1.21.4"
crc32fast = "=1.5.0"
parking_lot = "=0.12.5"
lazy_static = "=1.5.0"
rayon = "=1.11.0"
thiserror = "=1.0.69"
async-trait = "=0.1.89"
bytes = "=1.11.1"
criterion = { version = "=0.5.1", features = ["async_tokio"] }
tokio-metrics = { version = "=0.5.0", features = ["rt"] }
proptest = "=1.4.0"

# Internal
native-bridge-common = { path = "common" }
opensearch-repository-s3 = { path = "../../../plugins/native-repository-s3/src/main/rust" }
opensearch-repository-gcs = { path = "../../../plugins/native-repository-gcs/src/main/rust" }
opensearch-repository-azure = { path = "../../../plugins/native-repository-azure/src/main/rust" }
opensearch-repository-fs = { path = "../../../plugins/native-repository-fs/src/main/rust" }

[patch.crates-io]
datafusion = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/core" }
datafusion-catalog = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/catalog" }
datafusion-catalog-listing = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/catalog-listing" }
datafusion-common = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/common" }
datafusion-common-runtime = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/common-runtime" }
datafusion-datasource = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/datasource" }
datafusion-datasource-arrow = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/datasource-arrow" }
datafusion-datasource-csv = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/datasource-csv" }
datafusion-datasource-json = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/datasource-json" }
datafusion-datasource-parquet = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/datasource-parquet" }
datafusion-doc = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/doc" }
datafusion-execution = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/execution" }
datafusion-expr = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/expr" }
datafusion-expr-common = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/expr-common" }
datafusion-functions = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/functions" }
datafusion-functions-aggregate = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/functions-aggregate" }
datafusion-functions-aggregate-common = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/functions-aggregate-common" }
datafusion-functions-nested = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/functions-nested" }
datafusion-functions-table = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/functions-table" }
datafusion-functions-window = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/functions-window" }
datafusion-functions-window-common = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/functions-window-common" }
datafusion-macros = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/macros" }
datafusion-optimizer = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/optimizer" }
datafusion-physical-expr = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/physical-expr" }
datafusion-physical-expr-adapter = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/physical-expr-adapter" }
datafusion-physical-expr-common = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/physical-expr-common" }
datafusion-physical-optimizer = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/physical-optimizer" }
datafusion-physical-plan = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/physical-plan" }
datafusion-pruning = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/pruning" }
datafusion-session = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/session" }
datafusion-sql = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/sql" }
datafusion-substrait = { path = "/Volumes/workplace/opensearch-cache-port/datafusion/datafusion/substrait" }

[profile.release]
lto = false
codegen-units = 4
incremental = true
debug = "line-tables-only"
strip = false

[profile.dev]
opt-level = 1
lto = false
codegen-units = 16
incremental = true
debug = "full"
strip = false
